First modifications to front page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archit Agrawal | Portfolio</title>
+    <title>Henrique Da Silva Gameiro | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Leckerli+One&family=Lilita+One&family=Patrick+Hand&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lilita+One&family=Patrick+Hand&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,7 @@
     <header>
         <nav id="navBar" class="navBar">
             <div class="name">
-                <h1>Archit Agrawal</h1>
+                <h1>Henrique Da Silva Gameiro</h1>
             </div>
             <div class="menu-toggle" id="menuToggle">
                 <span class="bar"></span>
@@ -43,15 +43,13 @@
         <div class="over"></div>
         <div class="hero-container">
             <h1>
-                <p class="up">HI!</p><br>
-                <p class="down">I am Archit Agrawal</p>
+                <p class="up">Hello world!</p><br>
+                <p class="down">I am Henrique Da Silva Gameiro</p>
             </h1>
             <h1>I'm into <span class="auto-type"></span></h1>
             <div class="botton">
-                <a href="https://www.linkedin.com/in/archit-agrawal-860105293/" target="_blank"><img src="images/linkedin.svg" alt=""></a>
-                <a href="https://github.com/ArchitAgrawal25" target="_blank"><img src="images/github.svg" alt=""></a>
-                <a href="https://medium.com/@architagrawal063" target="_blank"><img src="images/medium.svg" alt=""></a>
-                <a href="https://www.instagram.com/archit_agrawal_25/" target="_blank"><img src="images/instagram.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/henrique-da-silva-gameiro-b052b9233" target="_blank"><img src="images/linkedin.svg" alt=""></a>
+                <a href="https://github.com/marluxiaboss" target="_blank"><img src="images/github.svg" alt=""></a>
             </div>
         </div>
     </section>
@@ -61,19 +59,61 @@
     <section class="about" id="about">
         <div class="about-container">
             <div class="imgeffect">
-                <img src="images/pic2.jpg" alt="">
+                <img src="images/henrique_cv_crop.jpg" alt="">
             </div>
             <div class="text">
                 <p class="p1">Who Am I?</p>
                 <h2>About Me</h2>
-                <p class="p2">I am a fourth-year student at Parul University, immersed in the world of Computer Science with a focus on Artificial Intelligence. Throughout my academic journey, I have delved deep into the realms of machine learning, deep learning, natural language processing (NLP), and computer vision. Driven by a passion for problem-solving, I've embarked on numerous projects that have honed my skills and showcased the transformative potential of technology. Looking ahead, I aspire to merge my expertise in AI with full-stack development, aspiring to become a data scientist and MERN stack developer. With a hunger for knowledge and a commitment to innovation, I eagerly anticipate the opportunities that lie ahead in shaping the future of technology.</p>
-                <a href="images/My_Resume.pdf" target="_blank"><button>Download CV</button></a>
+                <p class="p2">I'm a EPFL alumnus (master: Data Science, bachelor: Computer Science).<br />
+
+I'm interested in engineering and research, in particular AI security, understanding the learning mechanism of ML and evaluating AI's capabilities (benchmarking).
+I like to solve real-life issue with research ideas.<br />
+
+I'm curious about a lot of different topics beyond machine learning and computer science:
+Linguistics, History, Culture, Sport, Philosophy, Video games and Geopolitics.</p>
+                <a href="images/HDSG_resume.pdf" target="_blank"><button>Download CV</button></a>
             </div>
         </div>
     </section>
     <!-- About Section Html Code -->
 
-    <!-- Skills Section Html Code -->
+
+    <!-- Experience Section Html Code -->
+    <section class="Exprience" id="expirience">
+        <h1>Experience</h1>
+        <div class="container-ex">
+           <div class="timeline-block timeline-block-right">
+              <img src="images/riken_logo.jpeg" alt="">
+              <div class="marker"></div>
+              <div class="timeline-content">
+              <h3>Research trainee</h3>
+              <span>RIKEN AIP/span>
+              <p>Pioneered image-to-text generation using custom stable diffusion techniques.<br><br>Participated in data collection, preprocessing, and analysis using Python, PyTroch, or other relevant tools.<br><br>Contributed to writing research papers and reports</p>
+              </div>
+           </div>
+  
+           <div class="timeline-block timeline-block-left">
+              <div class="marker"></div>
+              <div class="timeline-content">
+                 <h3>Hackathon</h3>
+                 <span>PU CODE 36-Hour Hackathon</span>
+                 <p>Demonstrated resilience and creativity through sustained focus and teamwork in a high-pressure, time-constrained environment<br><br>Created a tool to help farmers detect crop diseases and analyze soil, using React and FastAPI</p>
+              </div>
+           </div>
+  
+           <div class="timeline-block timeline-block-right">
+              <div class="marker"></div>
+              <div class="timeline-content">
+                 <h3>Hackathon</h3>
+                 <span>Parul Lets Hack Hackathon</span>
+                 <p>Created a TensorFlow-powered tool to diagnose tuberculosis from X-rays.<br><br>Collaborated with interdisciplinary team members, including developers, designers, and subject matter experts, to analyze problem statements and devise innovative solutions.</p>
+              </div>
+           </div>
+        </div>
+      </section>
+    <!-- Experience Section Html Code -->
+
+        <!-- Skills Section Html Code -->
     <section class="Skills" id="skills">
         <div class="container">
             <div class="heading">
@@ -204,40 +244,6 @@
         </div>
     </section>
     <!-- Skills Section Html Code -->
-
-    <!-- Experience Section Html Code -->
-    <section class="Expirience" id="expirience">
-        <h1>Experience</h1>
-        <div class="container-ex">
-           <div class="timeline-block timeline-block-right">
-              <div class="marker"></div>
-              <div class="timeline-content">
-              <h3>Research Intern</h3>
-              <span>byteXL-University of West London</span>
-              <p>Pioneered image-to-text generation using custom stable diffusion techniques.<br><br>Participated in data collection, preprocessing, and analysis using Python, PyTroch, or other relevant tools.<br><br>Contributed to writing research papers and reports</p>
-              </div>
-           </div>
-  
-           <div class="timeline-block timeline-block-left">
-              <div class="marker"></div>
-              <div class="timeline-content">
-                 <h3>Hackathon</h3>
-                 <span>PU CODE 36-Hour Hackathon</span>
-                 <p>Demonstrated resilience and creativity through sustained focus and teamwork in a high-pressure, time-constrained environment<br><br>Created a tool to help farmers detect crop diseases and analyze soil, using React and FastAPI</p>
-              </div>
-           </div>
-  
-           <div class="timeline-block timeline-block-right">
-              <div class="marker"></div>
-              <div class="timeline-content">
-                 <h3>Hackathon</h3>
-                 <span>Parul Lets Hack Hackathon</span>
-                 <p>Created a TensorFlow-powered tool to diagnose tuberculosis from X-rays.<br><br>Collaborated with interdisciplinary team members, including developers, designers, and subject matter experts, to analyze problem statements and devise innovative solutions.</p>
-              </div>
-           </div>
-        </div>
-      </section>
-    <!-- Experience Section Html Code -->
 
     <!-- Project Section Html Code -->
     <section class="project" id="projects">
